# rrbot_pico2_ros2_control

./: .gitignore  README.md
pico2_firmware/: CMakeLists.txt  README.md
pico2_firmware/examples/serial/: CMakeLists.txt  serial_echo.cpp  serial_servo.cpp
pico2_firmware/examples/simple_servo/: CMakeLists.txt  servo_align.cpp  simple_servo.cpp
pico2_firmware/include/pca9685/: CMakeLists.txt  PCA9685_servo.cpp  PCA9685_servo.h  PCA9685_servo_driver.h  README.md
pico2_firmware/include/pca9685/docs/html/: PCA9685__servo_8h_source.html  PCA9685__servo__driver_8h_source.html  annotated.html  classPCA9685__servo-members.html  classPCA9685__servo.html  classPCA9685__servo__driver-members.html  classPCA9685__servo__driver.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  md_README.html  menudata.js  pages.html
pico2_firmware/include/pca9685/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  variables_0.js
pico2_firmware/include/pca9685/docs/latex/: annotated.tex  classPCA9685__servo.tex  classPCA9685__servo__driver.tex  md_README.tex  refman.tex
pico2_firmware/include/pca9685/examples/: CMakeLists.txt  simple_servo.cpp
pico2_firmware/lib/pca9685/: CMakeLists.txt  PCA9685_servo.cpp  PCA9685_servo_driver.cpp
pico2_firmware/src/: CMakeLists.txt  main.cpp  main.cpp.bad.suggestedByChatgpt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ros2_control_demo_example_1/share/ros2_control_demo_example_1/: package.bash  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/example_1/: CMakeLists.txt  README.md  package.xml  ros2_control_demo_example_1.xml
ros2_ws/src/example_1 /bringup/config/: rrbot_controllers.yaml
ros2_ws/src/example_1 /description/urdf/: rrbot_description.urdf.xacro
ros2_ws/src/example_1 /hardware/: rrbot.cpp
ros2_ws/src/example_1/bringup/config/: rrbot_controllers.yaml  rrbot_forward_position_publisher.yaml  rrbot_joint_trajectory_publisher.yaml  rrbot_jtc.yaml
ros2_ws/src/example_1/bringup/launch/: rrbot.launch.py  rrbot.serial.launch.py  rrbot.serial.trajectory.launch.py
ros2_ws/src/example_1/description/launch/: view_robot.launch.py
ros2_ws/src/example_1/description/ros2_control/: rrbot.ros2_control.xacro  rrbot.serial.ros2_control.xacro
ros2_ws/src/example_1/description/rviz/: rrbot.rviz
ros2_ws/src/example_1/description/urdf/: rrbot.serial.urdf.xacro  rrbot_description.urdf.xacro
ros2_ws/src/example_1/hardware/: rrbot.cpp  rrbot_serial.cpp  serial_driver.cpp
ros2_ws/src/example_1/hardware/include/ros2_control_demo_example_1/: rrbot.hpp  rrbot_serial.hpp  serial_driver.h  visibility_control.h
ros2_ws/src/rrbot_ros2_system/: CMakeLists.txt  README.md  package.xml  rrbot_ros2_system.xml
ros2_ws/src/rrbot_ros2_system/bringup/config/: rrbot_jtc.yaml  servobot_controllers.yaml  servobot_forward_position_publisher.yaml
ros2_ws/src/rrbot_ros2_system/bringup/launch/: servobot.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
ros2_ws/src/rrbot_ros2_system/description/launch/: view_robot.launch.py
ros2_ws/src/rrbot_ros2_system/description/ros2_control/: rrbot.ros2_control.xacro  servobot.ros2_control.xacro
ros2_ws/src/rrbot_ros2_system/description/urdf/: materials.xacro  servobot.trans  servobot.urdf.xacro  servobot.xacro  servobot_description.xacro
ros2_ws/src/rrbot_ros2_system/hardware/: serial_driver.cpp  servobot.cpp
ros2_ws/src/rrbot_ros2_system/hardware/include/ros2_control_demo_example_1/: rrbot.hpp  serial_driver.h
ros2_ws/src/rrbot_ros2_system/hardware/include/rrbot_ros2_system/: serial_driver.h  servobot.hpp
ros2_ws/src/rrbot_ros2_system/log/: latest_list
ros2_ws/src/rrbot_ros2_system/meshes/: Feetech_FT5316M_v3_1.stl  base_enclosure_1.stl  base_link.stl  link1_1.stl  link2_1.stl  link3_1.stl  servo2_1.stl  servo3_1.stl
ros2_ws/src/rrbot_ros2_system/test/: test_load_servobot_pico_driver.cpp
